--- a/APIWebsiteKTX/APIWebsiteKTX/Properties/launchSettings.json
+++ b/APIWebsiteKTX/APIWebsiteKTX/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5181",
+      "applicationUrl": "https://localhost:5181;http://localhost:5000                                                                                 ",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
