--- a/APIWebsiteKTX/APIWebsiteKTX/APIWebsiteKTX.csproj
+++ b/APIWebsiteKTX/APIWebsiteKTX/APIWebsiteKTX.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MimeKit" Version="4.12.0" />
+    <PackageReference Include="payOS" Version="1.0.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
